--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
   <div class="container">
     <h1>Web Helper</h1>
     <div class="menu">
       <button id="screenshot-btn" class="menu-item">
         📸 フルページスクリーンショット
+      </button>
+      <button id="screenshot-visible-btn" class="menu-item">
+        🖼️ 表示範囲スクリーンショット
       </button>
       <button id="checkbox-all-btn" class="menu-item">
         ☑️ すべてチェック
@@ -22,4 +27,5 @@
   </div>
   <script src="popup.js"></script>
 </body>
+
 </html>
