feat: Implement area selection for screenshots and add corresponding UI elements

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,9 @@
       <button id="screenshot-visible-btn" class="menu-item">
         🖼️ 表示範囲スクリーンショット
       </button>
+      <button id="screenshot-area-btn" class="menu-item">
+        🔲 矩形範囲スクリーンショット
+      </button>
       <button id="checkbox-all-btn" class="menu-item">
         ☑️ すべてチェック
       </button>
